# free-pitch

./: .gitignore  CMakeLists.txt  Cargo.toml  free_pitch.cc  free_pitch.h  main.cc  note.cc  note.h  notenames.h  single_notes.cc  synth.cc  synth.h
include/: free_pitch.h  i_free_pitch.h  initialize_free_pitch.h
src/: CMakeLists.txt  free_pitch.cpp  free_pitch.h  i_free_pitch.h  initialize_free_pitch.cc  main.cpp  main.rs  states.rs  window.cpp  window.h
src/free_pitch/: free_pitch.cc  free_pitch.h  i_window.h
src/free_pitch_impl/: free_pitch_impl.cc  synth.h  window.h
src/initializer/: free_pitch_impl.h  initialize_free_pitch.cc
src/states/: CMakeLists.txt  main_menu.cc  main_menu.cpp  main_menu.h  minigame_menu.cpp  single_note_trainer.rs  state.cc  state.cpp  state.h  states.h
src/states/minigames/: CMakeLists.txt  note.cc  single_notes.cpp  single_notes.h
src/synth/: synth.cc
src/ui_elements/: CMakeLists.txt  prop_rect.h  prop_to_pixel.cc  prop_to_pixel.h  ui_button.cc  ui_button.h  ui_clickable.h  ui_clickable_rect.h  ui_element.h  ui_elements.h  ui_rect.cc  ui_rect.h  ui_text.cc  ui_text.h
src/window/: window.cc  window.h
